<resources>
    <string name="app_name">DinDinnAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_persistent">Persistent Bottom Sheet</string>
    <string name="title">Kazarov delivery</string>
    <string name="btn_modal">Modal Bottom Sheet</string>
    <string name="tv_title">Learn Bottom Sheet</string>
    <string name="tv_description">
        A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
        some task in Android. Types of BottomSheet \n\nA BottomSheet is of two types: \n\nPersistent BottomSheet \n\nModal BottomSheet</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>
    <string name="loading">loading…</string>
    <string name="contentDesc">contentDesc</string>
    <string name="_00_usd">00 USD</string>
    <string name="menu">MENU</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="information">Information</string>
    <string name="delivery_is_free">Delivery is free</string>
    <string name="value">value:</string>
    <string name="_161_usd">161 USD</string>

</resources>