<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart">




    <FrameLayout
        android:paddingBottom="2dp"
        android:id="@+id/mGrayContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="-13dp"
            app:cardBackgroundColor="@color/flat_grey_light_1"
            app:cardCornerRadius="@dimen/dimen_25"
            android:elevation="@dimen/dimen_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/mBackBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_back"
                        android:contentDescription="@string/contentDesc" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/menu"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:weightSum="3"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/dimen_10"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_marginTop="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/tabs"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:orientation="horizontal" >

                    <TextView

                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="40sp"
                        android:textColor="@color/black"
                        android:text="@string/cart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <TextView
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="40sp"
                        android:textColor="@color/grey_font"
                        android:text="@string/orders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_weight="1"
                        android:layout_marginRight="-100dp"
                        android:textStyle="bold"
                        android:textSize="40sp"
                        android:textColor="@color/grey_font"
                        android:text="@string/information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mCartRecy"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/tabs"
                    tools:listitem="@layout/cart_item" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/mFabContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.andremion.counterfab.CounterFab
            android:id="@+id/mPayBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:background="@color/black"
            android:src="@drawable/ic_payment"
            app:backgroundTint="@color/white"
            app:badgeBackgroundColor="@color/flat_green_1"
            app:badgePosition="RightTop"
            app:badgeTextColor="@color/white"
            app:layout_anchorGravity="right|bottom" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:text="@string/delivery_is_free"
        android:textColor="@color/grey_font"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mGrayContainer" />

    <TextView
        android:id="@+id/mValueTxtReadOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:text="@string/value"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView

        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:text="@string/_161_usd"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/mValueTxtReadOnly"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>