<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/mCartFImage"
        android:layout_width="@dimen/dimen_60"
        android:layout_height="@dimen/dimen_60"
        android:layout_margin="@dimen/dimen_10"
        android:scaleType="centerCrop"
        android:src="@drawable/slide_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/contentDesc" />

    <TextView
        android:id="@+id/mCartFName"
        android:layout_margin="@dimen/dimen_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:textSize="@dimen/dimen_17"
        app:layout_constraintBottom_toBottomOf="@+id/mCartFImage"
        app:layout_constraintStart_toEndOf="@+id/mCartFImage"
        app:layout_constraintTop_toTopOf="@+id/mCartFImage" />


    <TextView
        android:id="@+id/mCartFPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_15"
        android:text="@string/_00_usd"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_17"
        app:layout_constraintBottom_toBottomOf="@+id/mCartFName"
        app:layout_constraintEnd_toStartOf="@+id/mCartRemoveBtn"
        app:layout_constraintTop_toTopOf="@+id/mCartFName" />


    <androidx.cardview.widget.CardView

        app:layout_constraintBottom_toBottomOf="@+id/mCartFPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mCartFPrice"
        android:id="@+id/mCartRemoveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen_8"
        android:layout_margin="@dimen/dimen_10"
        android:elevation="@dimen/dimen_10">
    <ImageView
        android:background="@color/grey_font"
        android:layout_width="@dimen/dimen_20"
        android:layout_height="@dimen/dimen_20"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/contentDesc" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>